====================
Changes in z3c.etree
====================

0.9.2
=====

- Bug: Fix Python 2.5 support.

- Bug: Declared z3c as a namespace.

- Implemented a way of comparing two XML fragments while ignoring the
  ordering of elements at the same level.

- Allow the use of NORMALIZE_WHITESPACE with tag contents.

0.9.1
=====

- fix bug in getting access to the elementree engine

0.9
===

- Start registering the elmenttree modules directly instead of using some
  proxy objects.